# packinganalysis

./: .bumpversion.cfg  AUTHORS.rst  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
examples/: dimer_packings.py  sphere_packings.py
src/packinganalysis/: __init__.py  analysis.py  data_preprocessing.py  order_parameters.py  particle_properties.py  periodic_boundaries.py
src/packinganalysis/data/dimer/: dump.csv  shape.csv
src/packinganalysis/data/sphere/: dump.csv  shape.csv
tests/: __init__.py  test_analysis.py  test_particle_properties.py
